log/build_2021-12-10_15-59-04/main/stderr.log
  File "/home/ubuntu/ws/Libero/install/main/lib/python3.8/site-packages/python_programs/main.py", line 38
    GPIO.setup(7, GPIO.OUT))
                           ^
SyntaxError: unmatched ')'

